Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116606

unable to deselect text in text input using touch

    XMLWordPrintable

Details

    • Linux/X11, Windows
    • ac3f1eace (dev), 3e0cd5a90 (6.6), ba5e82b38 (tqtc/lts-6.5), e434796c6 (dev), e87e78611 (6.8), 639003b31 (6.7), f19342d4c (tqtc/lts-6.5)

    Description

      All the text is selected. If we click with the mouse anywhere in the text, the selected text becomes deselected and the cursor appears at the touch position. However, when we perform the operation by touch, the text input seems to be stuck in the "text selection" mode and there is no way to get out of this mode. Touching the text only changing the selected text.

       

      Steps to reproduce the issue:

             1)Build and run the application on touch screen Windows or Linux.  

             2)Try to edit the text field.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              srutledg Shawn Rutledge
              chakib Chakib Boutaghane
              Votes:
              1 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: