Allow tapping to deselect in TextInput/TextField with pre-6.4 API

Amends 650342de792e0ab37ce8bac8ccde21ab9b96b2c9

Fixes: QTBUG-116606
Pick-to: 6.5
Change-Id: I5c53559e0727c65a7d921a13f063ea2612cdcbca
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit ac3f1eace1102543008a0ceded541e40ff495368)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>