tests/auto/quick/qquicktextinput/tst_qquicktextinput.cpp
@@ -7182,6 +7182,20 @@ void tst_qquicktextinput::touchscreenDoesNotSelect()
     QTest::touchEvent(&window, touchscreen.data()).release(0, QPoint(x2,y), &window);
     QQuickTouchUtils::flush(&window);
     QVERIFY(textInputObject->selectedText().isEmpty());
+
+    // select all text (which moves the cursor to the end), then tap:
+    // with old API, it deselects, and moves the cursor (QTBUG-116606)
+    // with new API, it remains selected, and the cursor remains at the end
+    textInputObject->selectAll();
+    const int cursorPos = textInputObject->cursorPosition();
+    QTest::touchEvent(&window, touchscreen.data()).press(0, QPoint(x2,y), &window);
+    QTest::touchEvent(&window, touchscreen.data()).release(0, QPoint(x2,y), &window);
+    QQuickTouchUtils::flush(&window);
+    QCOMPARE(textInputObject->selectedText().isEmpty(), !expectDefaultSelectByMouse);
+    if (expectDefaultSelectByMouse)
+        QCOMPARE(textInputObject->cursorPosition(), cursorPos);
+    else
+        QCOMPARE_NE(textInputObject->cursorPosition(), cursorPos);
 }
 
 void tst_qquicktextinput::touchscreenSetsFocusAndMovesCursor()
